# spotui

./: .gitignore  Cargo.toml  PRD.md  README.md  ROADMAP.md
src/: main.rs
src/api/: art.rs  auth.rs  lyrics.rs  mod.rs
src/config/: keymap.rs  mod.rs  theme.rs
src/events/: mod.rs
src/state/: mod.rs
src/ui/: mod.rs
