[package]
name = "spotui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
rspotify = { version = "0.14.0", features = ["client-reqwest"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
color-eyre = "0.6.3"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
image = "0.25.5"
keyring = "3.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lru = "0.13.0"
futures = "0.3.31"
chrono = "0.4.39"
webbrowser = "1.0.3"
tiny_http = "0.12.0"
thiserror = "2.0.11"
url = "2.5.4"
urlencoding = "2.1.3"
serde_json = "1.0.139"
